# also

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Mixed Structural Choice Operator(MCH) documentation.md  README.md  abc.history  best_mig.txt  refs.bib  stochastic.bbl  stochastic.tex
script/: npn.sh  (+16 more)
src/: CMakeLists.txt  also.cpp  mcnc_epfl.genlib  store.hpp
src/commands/: .stochastic.hpp.swp  a.hpp  aa.hpp  app.hpp  ax.hpp  cog.hpp  compute_opt_graph.hpp  compute_opt_m5ig.hpp  compute_opt_mig.hpp  cremiter.hpp  cut_rewrite.hpp  cutrw.hpp  decomp_flow.hpp  dm.hpp  emap.hpp  exact_bool_chain.hpp  exact_imp.hpp  exact_imply.hpp  exact_m3ig.hpp  exact_m5ig.hpp  exact_maj.hpp  exact_map.hpp  exact_rm3.hpp  exprsim.hpp  fanout.hpp  heuristic.hpp  heusto.hpp  img_fanout.hpp  img_lr.hpp  imgfc.hpp  imgff.hpp  imgrw.hpp  load.hpp  lut_maper.hpp  lut_mapping.hpp  lut_resyn.hpp  magcost.hpp  magic.hpp  mch.hpp  memristor.hpp  (+39 more)
src/core/: .node.cpp.swp  aig2xmg.cpp  aig2xmg.hpp  aoig2xmg.hpp  aoig2xmg_test.cpp  approximate_encoder.hpp  decomp_func.hpp  direct_mapping.cpp  direct_mapping.hpp  exact_aoig.hpp  exact_app_m3ig.cpp  exact_app_m3ig.hpp  exact_img.cpp  exact_img.hpp  exact_m3ig_app_encoder.hpp  exact_m3ig_encoder.hpp  exact_m3ig_sto_encoder.hpp  exact_m5ig_encoder.hpp  exact_rm.hpp  exact_rm3_encoder.hpp  exact_rm3_encoders.hpp  exact_rm3ig_encoder.hpp  exact_sto_m3ig.cpp  exact_sto_m3ig.hpp  extract_m5ig.hpp  fanout.hpp  flow_detail.hpp  format_convert.hpp  hash_extend.hpp  img_encoder.hpp  img_fc.hpp  img_ff_rewriting.hpp  img_rewriting.hpp  imgf.hpp  m3ig_helper.cpp  m3ig_helper.hpp  m5ig_helper.hpp  memristor_costs.cpp  memristor_costs.hpp  misc.cpp  (+42 more)
src/core/cut_enumeration/: img_cut.hpp  xmg_cut.hpp
src/core/sto/: node.cpp  node.h  vector.txt
src/core/structural_choice/: aig_choice_compute.hpp  choice_exact_map.hpp  choice_lut_mapper.hpp  choice_to_luts.hpp  mig_choice_compute.hpp  xag_choice_compute.hpp  xmg_choice_compute.hpp
src/core/utils/: graph_utils.cpp  graph_utils.hpp  hash_combine_wrapper.hpp  index.hpp  range_utils.cpp  range_utils.hpp  terminal.cpp  terminal.hpp  timer.hpp
src/networks/: general_cleanup.hpp  img_rewrite.hpp  m5ig.hpp  m5ig_npn.hpp  mig_best_rm3.txt  mig_to_rm3.txt  nor.hpp  opt_rm3.txt
src/networks/aoig/: aoig.h  aoig.hpp  build_xag_db.hpp  opt_aoig.txt  xag_dec.hpp  xag_lut_dec.hpp  xag_lut_npn.hpp  xor_and_mux.cpp  xor_and_mux.hpp
src/networks/img/: 4-npn.txt  cost_functions.hpp  fc_cost.hpp  iig_npn.hpp  img.hpp  img_all.hpp  img_compl_rw.cpp  img_compl_rw.hpp  img_npn.hpp  img_rewrite.hpp  img_utils.hpp  img_verilog_reader.hpp  imgrw.cpp  imgrw.hpp  opt_img.txt  opt_img_fanout_free.txt  opt_img_npn3.txt  opt_img_npn4.txt
src/networks/m5ig/: exact_online_m3ig.hpp  exact_online_m5ig.hpp  m5ig.hpp  m5ig_cleanup.hpp  m5ig_npn.hpp  opt_m3ig.txt  opt_m5ig.txt
(+168 files in other folders)
